Squashed commit of the following:
commit d0219f00755101a979c5cb29a96a62fab5759983
Author: Douglas Gillespie <50671166+douggillespie@users.noreply.github.com>
Date:   Mon May 19 16:53:25 2025 +0100

    Harp (#218)

    * getting more duty cycle info out of header

    * HARP DS work

    * maybe working x.wav handler

    * sort timing for offline HARP data

    * Fix normal wav and SUD files

    Fix a couple of issues with processing normal wav and sud files.

    * Update .classpath

    * restore J17 compatibility

    * Fix GEBCO Raster maps

    Fix error in reading Raster maps, seemingly caused by newer version of NetCDF libaray.

commit f4ff17b66be54d34258a9bae768d6cef4946215e
Merge: 31ee6902 34bca450
Author: Douglas Gillespie <50671166+douggillespie@users.noreply.github.com>
Date:   Mon May 19 16:37:20 2025 +0100

    Merge branch 'main' of https://github.com/PAMGuard/PAMGuard

commit 34bca450a0ca1abc5e45ddb45a38072b0bc0e667
Author: Douglas Gillespie <50671166+douggillespie@users.noreply.github.com>
Date:   Mon May 19 16:35:55 2025 +0100

    Harp merge (#217)

    * getting more duty cycle info out of header

    * HARP DS work

    * maybe working x.wav handler

    * sort timing for offline HARP data

    * Fix normal wav and SUD files

    Fix a couple of issues with processing normal wav and sud files.

    * Update README.html

    * Update .classpath

    * restore J17 compatibility

    * Fix GEBCO Raster maps

    Fix error in reading Raster maps, seemingly caused by newer version of NetCDF libaray.

commit 31ee6902a2d48108be2fc1264ff58c1fdd5b3821
Author: Douglas Gillespie <50671166+douggillespie@users.noreply.github.com>
Date:   Fri May 16 12:16:04 2025 +0100

    Update README.html

commit 833c50c0344487d9c1895f2edce359f11ed1b438
Author: Jamie Mac <macster110@gmail.com>
Date:   Fri May 16 12:02:19 2025 +0100

    Sud fixes (#214)

    * Getting dolphin deep learning click detector working

    * Thomas click deep learning  unit test

    * Add de